# DEE

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
docs/: DEE_Specification_v2.0.docx
examples/: Makefile  Readme.md  character_simulation.c
include/: kc_hormone.h
python/: pyproject.toml
python/dee/: __init__.py  client.py  models.py
python/examples/: basic_chat.py
server/: kc_api_server.c
src/: kc_active_ai.c  kc_hormone.c  kc_persona.c
