[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "dee-python"
version         = "1.3.0"
description     = "DEE (Digital Emotion Engine) Python 클라이언트 — Kcode 프로젝트"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"

# 외부 의존성 없음 — 표준 라이브러리(urllib, json, dataclasses)만 사용
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dee*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
